kubernetes/smartinvest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: smartinvest-user-cip
                port:
                  number: 80
          - path: /api/portfolio
            pathType: Prefix
            backend:
              service:
                name: smartinvest-portfolio-cip
                port:
                  number: 80
          - path: /api/analyses
            pathType: Prefix
            backend:
              service:
                name: smartinvest-portfolio-cip
                port:
                  number: 80
          - path: /api/stock
            pathType: Prefix
            backend:
              service:
                name: smartinvest-portfolio-cip
                port:
                  number: 80
